--- a/studentlibrary/build.gradle
+++ b/studentlibrary/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
-apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'com.android.library'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.phone1000.stelephonegoods"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
@@ -18,18 +17,11 @@ android {
         }
     }
 }
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.zhy:okhttputils:2.6.2'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'jp.wasabeef:picasso-transformations:2.1.0'
-    compile project(':teachlibrary')
-    compile project(':studentlibrary')
-    compile 'org.xutils:xutils:3.3.38'
-    compile 'com.android.support:cardview-v7:24.1.1'
 }
