--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:name=".SElephant"
@@ -38,7 +39,9 @@
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.BankActivity" />
         <activity android:name=".activities.AddNewAddressActivity" />
-        <activity android:name=".activities.EditTextActivity"></activity>
+        <activity android:name=".activities.EditTextActivity" />
+        <activity android:name=".activities.IdCardCertificationActivity" />
+        <activity android:name=".activities.RegistActivity"></activity>
     </application>
 
 </manifest>
